# enum_variant_name_const

./: Cargo.toml
src/: lib.rs
tests/: main.rs
