[package]
name = "enum_variant_name_const"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proc-macro that adds a const fn returning the variant name of an enum"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
